[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fft"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = ["numpy", "matplotlib", "librosa", "soundfile", "sounddevice", "scipy", "python-dotenv", "PySide6", "plotly"]

[project.scripts]
run = "scripts.ingest.py:main"
clsuter = "scripts.cluster.py:main"
find = "scripts.find.py:main"

[project.gui-scripts]
gui = "app.py:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true
